uplift hserver